--- a/package.json
+++ b/package.json
@@ -13,22 +13,21 @@
   "dependencies": {
     "@react-native-async-storage/async-storage": "^2.1.0",
     "@react-native-masked-view/masked-view": "^0.3.1",
-    "@react-navigation/native": "^6.1.18",
-    "@react-navigation/stack": "^6.4.1",
+    "@react-navigation/native": "^7.0.14",
+    "@react-navigation/stack": "^7.1.1",
     "@reduxjs/toolkit": "^2.5.0",
     "dayjs": "^1.11.13",
-    "install": "^0.13.0",
     "ky": "^1.7.4",
-    "npm": "^11.0.0",
     "react": "18.2.0",
     "react-native": "0.74.6",
     "react-native-bootsplash": "^6.2.3",
+    "react-native-device-info": "^14.0.2",
     "react-native-gesture-handler": "^2.20.1",
     "react-native-onesignal": "^5.2.8",
     "react-native-reanimated": "^3.16.1",
     "react-native-responsive-screen": "^1.4.2",
     "react-native-safe-area-context": "^4.11.1",
-    "react-native-screens": "^3.34.0",
+    "react-native-screens": "^4.6.0",
     "react-native-svg": "^15.11.1",
     "react-redux": "^9.2.0",
     "redux": "^5.0.1"
