--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "reset": "npm run start -- --reset-cache"
   },
   "dependencies": {
+    "@miblanchard/react-native-slider": "^2.6.0",
     "@react-native-async-storage/async-storage": "^2.1.0",
     "@react-native-masked-view/masked-view": "^0.3.1",
     "@react-navigation/native": "^7.0.14",
@@ -30,7 +31,8 @@
     "react-native-screens": "^4.6.0",
     "react-native-svg": "^15.11.1",
     "react-redux": "^9.2.0",
-    "redux": "^5.0.1"
+    "redux": "^5.0.1",
+    "use-debounce": "^10.0.4"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
@@ -46,6 +48,7 @@
     "eslint": "^8.19.0",
     "jest": "^29.6.3",
     "prettier": "^2.8.8",
+    "react-native-devsettings": "^1.0.5",
     "react-native-dotenv": "^3.4.11",
     "react-native-svg-transformer": "^1.5.0",
     "react-test-renderer": "18.2.0",
