--- a/package.json
+++ b/package.json
@@ -18,12 +18,16 @@
     "@react-navigation/stack": "^7.1.1",
     "@reduxjs/toolkit": "^2.5.0",
     "dayjs": "^1.11.13",
+    "i18next": "^24.2.2",
     "ky": "^1.7.4",
     "react": "18.2.0",
+    "react-i18next": "^15.4.0",
     "react-native": "0.74.6",
     "react-native-bootsplash": "^6.2.3",
+    "react-native-calendars": "^1.1308.1",
     "react-native-device-info": "^14.0.2",
     "react-native-gesture-handler": "^2.20.1",
+    "react-native-localize": "^3.4.1",
     "react-native-onesignal": "^5.2.8",
     "react-native-reanimated": "^3.16.1",
     "react-native-responsive-screen": "^1.4.2",
